# tokyo_job_finder_skill

./: .gitignore  MANIFEST.in  README.md  SKILL.md  pyproject.toml  smoke_test.py  smoke_test_json.py
config/: priority_companies.json  sources.example.json  sources.json
docs/: cli_json_output.md  cli_usage.md  config_validation_and_retries.md  design.md  development.md  dynamic_provider_filters.md  error_handling.md  install_and_mount.md  provider_filters.md  provider_matrix.md
examples/: backend_platform.txt  demo_run.py  japan_ai_engineer.txt  resume_plus_query.txt
job_finder/: __init__.py  autofilters.py  cli.py  config.py  fetchers.py  formatter.py  matcher.py  models.py  parsers.py  prompts.py  skill.py
tests/: test_autofilters.py  test_cli.py  test_cli_json.py  test_config.py  test_fetchers.py  test_matcher.py  test_provider_filters.py  test_provider_filters_config.py  test_skill_payload.py
